# ai_action_summit_hackathon_an2i

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  doctor-patient-dialogues.md  mgdb-an2i.pem  pyproject.toml
data/: doctor-patient-dialogues.json
workspace/app/: main.py
workspace/src/: api.py  auto_gen_mongodb.py  celery_app.py  create_embeddings.py  db_utils.py  detect_prescription_anomalies.py  extract_ordonnance_data.py  gather_medical_knowledge.py  gather_medical_knowledge_tool.py  gather_medical_syonyms_tool.py  generate_data.py  generate_follow_up_questions.py  generate_pertinent_points.py  hello.py  natural_google_search.py  prompts.py  propose_medical_queries.py  pydantic_models.py  report_generation.py  retreive_historical_points.py  retrieve_historical_points.py  search_clinical_records.py  search_mayo_clinic.py  search_wikipedia.py  show_first_ten.py  stt_simulation_module.py  tasks.py  utils.py
workspace/test/: test_api.py  test_hello.py
