[project]
name = "ai_summit_hackathon_an2i"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "openai",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pytest-dotenv>=0.5.2",
    "pytest>=8.3.3",
    "ruff>=0.7.4",
    "openai>=1.63.0",
    "ipykernel>=6.29.5",
    "bs4>=0.0.2",
    "requests>=2.32.3",
    "types-requests>=2.32.0.20241016",
]

[tool.mypy]
strict = true
files = ["workspace/src"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
env_files = [".env"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
pythonpath = [
  "workspace/src",
]
