[project]
name = "ai_summit_hackathon_an2i"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-cloud>=0.34.0",
    "ipykernel>=6.29.5",
    "openai",
    "speechrecognition>=3.14.1",
    "webrtcvad>=2.0.10",
    "celery>=5.3.6",
    "redis>=5.0.1",
    "flower>=2.0.1",
    "flask>=3.1.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.3",
    "bs4>=0.0.2",
    "streamlit>=1.42.0",
    "googlesearch-python>=1.3.0",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pytest-dotenv>=0.5.2",
    "pytest>=8.3.3",
    "ruff>=0.7.4",
    "openai>=1.63.0",
    "ipykernel>=6.29.5",
    "bs4>=0.0.2",
    "requests>=2.32.3",
    "types-requests>=2.32.0.20241016",
    "googlesearch-python>=1.3.0",
    "flask>=3.1.0",
    "sentence-transformers>=3.4.1",
    "pymongo>=4.11.1",
]

[tool.setuptools]
packages = ["workspace"]

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_untyped_decorators = true

files = ["workspace/src"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
env_files = [".env"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
pythonpath = [
  "workspace/src",
]
